--- a/src/options.html
+++ b/src/options.html
@@ -57,7 +57,7 @@
               </label>
             </div>
           </div>
-          <p class="text-base text-neutral-500">tip: you can still access the options by pressing extensions > mtab > options</p>
+          <p class="text-base text-neutral-500">Tip: you can still access the options by pressing extensions > mtab > options</p>
         </section>
         <!-- user -->
         <div class="mb-4 grid grid-cols-[1fr_max-content_1fr] items-center gap-2">
@@ -110,7 +110,7 @@
                 </label>
               </div>
             </div>
-            <p class="text-base text-neutral-500">when enabled the page title changes to match what is in the search bar</p>
+            <p class="text-base text-neutral-500">When enabled the page title changes to match what is in the search bar</p>
           </div>
           <div class="grid gap-2 text-base">
             <p class="text-white">title.effect</p>
@@ -161,7 +161,7 @@
           <div id="title-custom-favicon-upload-section">
             <div class="grid gap-2">
               <p class="text-base text-white">title.customFavicon</p>
-              <p class="text-base text-neutral-500">note: the customFavicon is not included when exporting and importing configs due to taking too much space</p>
+              <p class="text-base text-neutral-500">Note: the customFavicon is not included when exporting and importing configs due to taking too much space</p>
               <div class="grid grid-cols-2 gap-2">
                 <input type="file" id="title-custom-favicon-upload" accept="image/*" class="w-full cursor-pointer rounded-md bg-cyan-500 p-2 text-base text-white transition hover:bg-cyan-600" />
                 <button id="title-custom-favicon-reset-button" class="w-full cursor-pointer rounded-md bg-rose-500 p-2 transition hover:bg-rose-600">
@@ -211,14 +211,14 @@
             <div id="message-font-custom-section" class="grid grid-flow-row gap-4">
               <div class="grid gap-2">
                 <p class="text-base text-white">message.font.custom</p>
-                <div id="message-font-custom-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
-                  <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
-                  <input id="message-font-custom-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input font url..." />
-                </div>
                 <p class="text-base text-neutral-500">
                   Use a google font url to choose a font<br />
                   Example: https://fonts.googleapis.com/css2?family=Anton+SC&display=swap
                 </p>
+                <div id="message-font-custom-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                  <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                  <input id="message-font-custom-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input font url..." />
+                </div>
               </div>
             </div>
             <div class="grid gap-2">
@@ -260,11 +260,11 @@
             </div>
             <div id="message-type-weather-section" class="grid grid-flow-row gap-4">
               <p class="text-base text-neutral-500">
-                note:<br />
-                you need to have location permissions set to `allow` for weather messages to work <br />
-                weather data may be delayed due to being cached in 5 minutes intervals for faster load times<br />
+                Note: you need to have location permissions set to `allow` for weather messages to work <br />
                 <br />
-                all weather data from <a href="https://open-meteo.com" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">open-meteo.com</a>
+                Weather data may be delayed due to being cached in 5 minutes intervals for faster load times<br />
+                <br />
+                All weather data from <a href="https://open-meteo.com" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">open-meteo.com</a>
               </p>
               <div class="grid gap-2 text-base">
                 <p class="text-white">message.weather.unitsType</p>
@@ -335,7 +335,7 @@
               <div id="wallpaper-url-section">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.url</p>
-                  <p class="text-base text-neutral-500">tip: you can use video file formats like MP4, MOV & more</p>
+                  <p class="text-base text-neutral-500">Tip: you can use video file formats like MP4, MOV & more</p>
                   <div id="wallpaper-url-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                     <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                     <input id="wallpaper-url-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input url..." />
@@ -346,11 +346,11 @@
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.fileUpload</p>
                   <p class="text-base text-neutral-500">
-                    tip: you can upload PNG, JPG, WEBP, GIF, MP4 file formats & more
+                    Tip: you can upload PNG, JPG, WEBP, GIF, MP4 file formats & more
                     <br /><br />
-                    it is recommended to scale images to match your resolution for faster loading times
+                    It is recommended to scale images to match your resolution for faster loading times
                     <br /><br />
-                    note: the fileUpload wallpaper is not included when exporting and importing configs due to taking too much space
+                    Note: the fileUpload wallpaper is not included when exporting and importing configs due to taking too much space
                   </p>
                   <div class="grid grid-cols-2 gap-2">
                     <input
@@ -602,7 +602,7 @@
                 </label>
               </div>
             </div>
-            <span class="text-base text-neutral-500">tip: press Ctrl+Enter to open your search in a new tab</span>
+            <span class="text-base text-neutral-500">Tip: press Ctrl+Enter to open your search in a new tab</span>
           </div>
           <div class="grid gap-2">
             <p class="text-base text-white">search.focusedBorderColor</p>
@@ -627,15 +627,15 @@
             <div id="search-font-custom-section" class="grid grid-flow-row gap-4">
               <div class="grid gap-2">
                 <p class="text-base text-white">search.font.custom</p>
+                <p class="text-base text-neutral-500">
+                  Use a google font url to choose a font<br />
+                  Example: https://fonts.googleapis.com/css2?family=Anton+SC&display=swap
+                </p>
                 <div id="search-font-custom-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                   <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                   <input id="search-font-custom-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input font url..." />
                 </div>
               </div>
-              <p class="text-base text-neutral-500">
-                Use a google font url to choose a font<br />
-                Example: https://fonts.googleapis.com/css2?family=Anton+SC&display=swap
-              </p>
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">search.textColor</p>
@@ -673,7 +673,7 @@
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">search.searchIconColor</p>
-              <p class="text-base text-neutral-500">this changes the -> color</p>
+              <p class="text-base text-neutral-500">This changes the -> color</p>
               <div id="search-search-icon-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                 <input id="search-search-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
@@ -681,7 +681,7 @@
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">search.bookmarkIconColor</p>
-              <p class="text-base text-neutral-500">this changes the // color</p>
+              <p class="text-base text-neutral-500">This changes the // color</p>
               <div id="search-bookmark-icon-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                 <input id="search-bookmark-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
@@ -689,7 +689,7 @@
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">search.selectIconColor</p>
-              <p class="text-base text-neutral-500">this changes the > color</p>
+              <p class="text-base text-neutral-500">This changes the > color</p>
               <div id="search-select-icon-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                 <input id="search-select-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
@@ -698,7 +698,6 @@
             <div class="grid gap-2">
               <div class="grid w-full grid-cols-[max-content_auto] place-items-center">
                 <p class="text-base text-white">search.recognizeLinks</p>
-
                 <div class="ml-auto">
                   <label class="relative inline-flex cursor-pointer items-center">
                     <input id="search-recognize-links-checkbox" type="checkbox" value="" class="peer sr-only" />
@@ -709,7 +708,7 @@
                 </div>
               </div>
               <p class="text-base text-neutral-500">
-                automatically detects links in search results and opens them directly instead of running a search
+                Automatically detects links in search results and opens them directly instead of running a search
                 <br /><br />
                 e.g., typing `example.com` navigates directly to https://example.com instead of performing a search
               </p>
@@ -820,9 +819,9 @@
                 </div>
               </div>
               <p class="text-base text-neutral-500">
-                Shows live query suggestions as you type.<br /><br />
+                Shows live query suggestions as you type<br /><br />
                 Suggestions are sourced from DuckDuckGo's public autocomplete suggestions API and are not based on your personal search history. Requests are sent directly from your browser to
-                DuckDuckGo and do not include cookies, accounts, extension identifiers, or other personal data.
+                DuckDuckGo and do not include cookies, accounts, extension identifiers, or other personal data
               </p>
             </div>
             <div class="grid gap-2">
@@ -837,7 +836,7 @@
                   </label>
                 </div>
               </div>
-              <p class="text-base text-neutral-500">shows the current date when you type 'date'</p>
+              <p class="text-base text-neutral-500">Shows the current date when you type 'date'</p>
             </div>
             <div class="grid gap-2">
               <div class="grid w-full grid-cols-[max-content_auto] place-items-center">
@@ -852,7 +851,7 @@
                 </div>
               </div>
               <p class="text-base text-neutral-500">
-                automatically evaluates math expressions typed into the search input <br /><br />e.g., cos(pi / 6) * (3^2 - 4) + sin(45deg) + sqrt(20) = 9.50936975510832
+                Automatically evaluates math expressions typed into the search input <br /><br />e.g., cos(pi / 6) * (3^2 - 4) + sin(45deg) + sqrt(20) = 9.50936975510832
               </p>
             </div>
             <div class="grid gap-2">
@@ -868,11 +867,11 @@
                 </div>
               </div>
               <p class="text-base text-neutral-500">
-                shows word definitions when you include definition keywords in the search input
+                Shows word definitions when you include definition keywords in the search input
                 <br /><br />
                 e.g., 'morning def' or 'morning definition'
                 <br /><br />
-                definitions are sourced from
+                Definitions are sourced from
                 <a href="https://github.com/open-dictionary/english-dictionary" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600"
                   >https://github.com/open-dictionary/english-dictionary</a
                 >
@@ -891,13 +890,13 @@
                 </div>
               </div>
               <p class="text-base text-neutral-500">
-                converts units directly from the search input
+                Converts units directly from the search input
                 <br /><br />
                 e.g., '1 ft => 0.3048 m'
                 <br /><br />
-                supports length, weight, temperature, time, volume, area, speed, angle, data, and 170+ currencies
+                Supports length, weight, temperature, time, volume, area, speed, angle, data, and 170+ currencies
                 <br /><br />
-                currency conversion rates are sourced from
+                Currency conversion rates are sourced from
                 <a href="https://hexarate.paikama.co" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">hexarate.paikama.co</a>
               </p>
             </div>
@@ -914,11 +913,11 @@
                 </div>
               </div>
               <p class="text-base text-neutral-500">
-                generates passwords directly from the search input, entirely locally
+                Generates passwords directly from the search input, entirely locally
                 <br /><br />
-                no data is sent anywhere; password generation happens on your device
+                No data is sent anywhere; password generation happens on your device
                 <br /><br />
-                type 'pw &lt;length&gt; &lt;flags&gt;' or 'password &lt;length&gt; &lt;flags&gt;' to generate a password
+                Type 'pw &lt;length&gt; &lt;flags&gt;' or 'password &lt;length&gt; &lt;flags&gt;' to generate a password
                 <br /><br />
                 e.g., 'password 16 luns' generates a 16 character password with lowercase letters, uppercase letters, numbers, and symbols
                 <br /><br />
@@ -926,7 +925,7 @@
                 <br />l - lowercase letters <br />u - uppercase letters <br />n - numbers <br />s - symbols <br />m - memorable <br /><br />
                 if no arguments are specified, defaults to 16 luns
                 <br /><br />
-                order of arguments and flags does not matter
+                Order of arguments and flags does not matter
               </p>
             </div>
           </div>
@@ -1012,7 +1011,7 @@
             </div>
           </div>
           <div id="bookmarks-user-defined-or-default-blocky-section" class="grid grid-flow-row gap-4">
-            <p class="text-base text-neutral-500">tip: Ctrl click or Middle click to open bookmark in a new tab</p>
+            <p class="text-base text-neutral-500">Tip: Ctrl click or Middle click to open bookmark in a new tab</p>
             <div class="grid gap-2 text-base">
               <div class="grid w-full grid-cols-[max-content_auto] place-items-center">
                 <p class="text-base text-white">bookmarks.showBookmarkNames</p>
@@ -1038,7 +1037,7 @@
                   </label>
                 </div>
               </div>
-              <p class="text-neutral-500">enabling numberKeys -> makes it so that pressing 1 opens first bookmark, 2 opens second bookmark, and so on (0 activates the back button)</p>
+              <p class="text-neutral-500">Enabling numberKeys -> makes it so that pressing 1 opens first bookmark, 2 opens second bookmark, and so on (0 activates the back button)</p>
             </div>
             <div class="grid gap-2 text-base">
               <p class="text-white">bookmarks.lineOrientation</p>
@@ -1085,7 +1084,7 @@
               </div>
               <p class="text-white">bookmarks.userDefined</p>
               <p class="text-neutral-500">
-                <span>valid icon types you can use:</span>
+                <span>Valid icon types you can use:</span>
               </p>
               <p class="text-neutral-500">
                 <span class="text-indigo-500">remixicon:</span>
@@ -1232,9 +1231,10 @@
           <div class="grid gap-2 text-base">
             <p class="text-white">extras.snow.enabled</p>
             <p class="text-base text-neutral-500">
-              fun snow effect
+              Fun snow effect
               <br />
-              winter mode enables snow during december
+              <br />
+              Winter mode enables snow during december
             </p>
             <div class="grid grid-cols-2 gap-2">
               <button id="extras-snow-enabled-on-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
