tweak options page

--- a/src/options.html
+++ b/src/options.html
@@ -1082,7 +1082,7 @@
                   <input id="bookmarks-user-defined-cols-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input number..." />
                 </div>
               </div>
-              <p class="text-white">bookmarks.userDefined</p>
+              <p class="pt-4 text-white">bookmarks.userDefined</p>
               <p class="text-neutral-500">
                 <span>Valid icon types you can use:</span>
               </p>
