add bookmarks.defaultIconColor and make bookmark node iconColor property optional and fix default-blocky setting not saving

--- a/src/options.html
+++ b/src/options.html
@@ -1060,6 +1060,13 @@
               </div>
             </div>
             <div class="grid gap-2">
+              <p class="text-base text-white">bookmarks.defaultIconColor</p>
+              <div id="bookmarks-default-icon-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                <input id="bookmarks-default-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
+              </div>
+            </div>
+            <div class="grid gap-2">
               <p class="text-base text-white">bookmarks.defaultFolderIconType</p>
               <div id="bookmarks-default-folder-icon-type-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
