change appearance of options page

--- a/src/options.html
+++ b/src/options.html
@@ -28,7 +28,7 @@
         <p class="text-center text-sm md:text-base">
           <a href="https://github.com/maxhu08/mtab" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">github</a>
           <span class="text-neutral-500"> | </span>
-          <span id="version-number-text" class="text-indigo-500">version </span>
+          <span id="version-number-text" class="text-indigo-500">v</span>
           <span class="text-neutral-500"> | </span>
           <span id="user-agent-text" class="text-orange-500"></span>
         </p>
