add keybinds to next and prev for bookmark pagination

--- a/src/options.html
+++ b/src/options.html
@@ -1079,6 +1079,7 @@
                   </label>
                 </div>
               </div>
+              <p class="text-neutral-500">When enabled, bookmark rows beyond maxBookmarkRowsPerPage are split into extra pages. Use the Prev/Next buttons or [ and ] keys to move between pages.</p>
             </div>
             <div id="bookmarks-max-bookmark-rows-per-page-section" class="grid gap-2">
               <p class="text-base text-white">bookmarks.maxBookmarkRowsPerPage</p>
