--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
             <div id="search-container" class="font-search corner-style grid w-full grid-cols-[max-content_auto_max-content] border-2 border-transparent p-1 text-base opacity-0 md:p-2 md:text-2xl">
               <span class="search-search-icon-color select-none font-semibold">->&nbsp;</span>
               <input id="search-input" type="text" autocomplete="off" class="font-search placeholder-color-search text-transition-none bg-transparent outline-none" />
-              <div id="search-input-buttons" class="hidden items-center gap-1 pl-1">
-                <button id="search-clear-button" type="button" class="corner-style hidden h-[1.5em] w-[1.5em] place-items-center text-lg leading-none transition-colors hover:bg-white/20 md:text-2xl">
+              <div id="search-input-buttons" class="hidden items-center gap-3 px-1">
+                <button id="search-clear-button" type="button" class="search-action-button corner-style hidden h-[1em] w-[1em] place-items-center text-[1em] leading-none">
                   <i class="ri-close-large-line search-action-icon-color block leading-none"></i>
                 </button>
-                <button id="search-submit-button" type="button" class="corner-style hidden h-[1.5em] w-[1.5em] place-items-center text-lg leading-none transition-colors hover:bg-white/20 md:text-2xl">
+                <button id="search-submit-button" type="button" class="search-action-button corner-style hidden h-[1em] w-[1em] place-items-center text-[1em] leading-none">
                   <i class="ri-search-line search-action-icon-color block leading-none"></i>
                 </button>
               </div>
