fix(wallpapers): make filters apply to wallpaper type default

--- a/src/options.html
+++ b/src/options.html
@@ -382,7 +382,7 @@
                 </div>
                 <div id="wallpaper-default-preview-section" class="rounded-md bg-neutral-800 p-2">
                   <div class="grid grid-cols-3 gap-2">
-                    <div class="aspect-video rounded-md bg-cover bg-center" style="background-image: url(&quot;./assets/wallpapers/default.jpg&quot;)"></div>
+                    <div id="wallpaper-default-preview-media" class="aspect-video rounded-md bg-cover bg-center" style="background-image: url(&quot;./assets/wallpapers/default.jpg&quot;)"></div>
                   </div>
                 </div>
                 <div id="wallpaper-reset-all-wrapper">
