feat(options): enhance wallpaper URL tips for better user guidance

--- a/src/options.html
+++ b/src/options.html
@@ -355,7 +355,11 @@
               <div id="wallpaper-url-section">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.urls</p>
-                  <p class="text-base text-neutral-500">Tip: you can use video file formats like MP4, MOV & more</p>
+                  <p class="text-base text-neutral-500">
+                    Tip: you can use video file formats like MP4, MOV & more
+                    <br />
+                    To use URLs as wallpapers (right click & copy image address)
+                  </p>
                 </div>
               </div>
               <div id="wallpaper-file-upload-section">
