refactor(switches): simplify section visibility handling with a utility function

--- a/src/options.html
+++ b/src/options.html
@@ -123,7 +123,7 @@
               </button>
             </div>
           </div>
-          <div id="title-effect-typewriter-section">
+          <div id="title-effect-typewriter-section" class="grid">
             <div class="grid gap-4">
               <div class="grid gap-2">
                 <p class="text-base text-white">title.typewriter.speed</p>
@@ -158,7 +158,7 @@
               </button>
             </div>
           </div>
-          <div id="title-custom-favicon-upload-section">
+          <div id="title-custom-favicon-upload-section" class="grid">
             <div class="grid gap-2">
               <p class="text-base text-white">title.customFavicon</p>
               <p class="text-base text-neutral-500">Note: the customFavicon is not included when exporting and importing configs due to taking too much space</p>
@@ -278,7 +278,7 @@
                 </div>
               </div>
             </div>
-            <div id="message-type-custom-section">
+            <div id="message-type-custom-section" class="grid">
               <div class="grid gap-2 text-base">
                 <p class="text-white">message.customText</p>
                 <p id="message-custom-text-info" class="whitespace-pre-line text-base text-neutral-500"></p>
@@ -352,7 +352,7 @@
               </div>
             </div>
             <div class="grid gap-4">
-              <div id="wallpaper-url-section">
+              <div id="wallpaper-url-section" class="grid">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.urls</p>
                   <p class="text-base text-neutral-500">
@@ -362,7 +362,7 @@
                   </p>
                 </div>
               </div>
-              <div id="wallpaper-file-upload-section">
+              <div id="wallpaper-file-upload-section" class="grid">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.fileUploads</p>
                   <p class="text-base text-neutral-500">
@@ -375,7 +375,7 @@
                   <input type="file" id="wallpaper-file-upload-input" accept="image/*,video/*" multiple class="hidden" />
                 </div>
               </div>
-              <div id="wallpaper-solid-color-section">
+              <div id="wallpaper-solid-color-section" class="grid">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.solidColors</p>
                 </div>
@@ -1154,7 +1154,7 @@
               </div>
             </div>
           </div>
-          <div id="bookmarks-user-defined-section">
+          <div id="bookmarks-user-defined-section" class="grid">
             <div class="grid gap-2 text-base">
               <div class="grid gap-2">
                 <p class="text-base text-white">bookmarks.userDefinedCols</p>
@@ -1230,7 +1230,7 @@
               </div>
             </div>
           </div>
-          <div id="bookmarks-default-blocky-section">
+          <div id="bookmarks-default-blocky-section" class="grid">
             <div class="grid gap-4 text-base">
               <div class="grid gap-2">
                 <p class="text-base text-white">bookmarks.defaultBlockyCols</p>
@@ -1250,7 +1250,7 @@
                   </button>
                 </div>
               </div>
-              <div id="bookmarks-default-blocky-color-section">
+              <div id="bookmarks-default-blocky-color-section" class="grid">
                 <div class="grid gap-2">
                   <p class="text-base text-white">bookmarks.defaultBlockyColor</p>
                   <div id="bookmarks-default-blocky-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
@@ -1282,7 +1282,7 @@
               </div>
             </div>
           </div>
-          <div id="bookmarks-default-or-default-blocky-section">
+          <div id="bookmarks-default-or-default-blocky-section" class="grid">
             <div class="grid gap-2 text-base">
               <p class="text-white">bookmarks.defaultFaviconSource</p>
               <p class="text-base text-neutral-500">(determines where bookmark favicons are fetched from)</p>
